# phantom_data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
sphinx-config/: conf.py  index.rst
sphinx-config/api/: address.rst  address_data_generator.rst  data_generator.rst  data_model_interface.rst  person.rst  person_data_generator.rst
src/mods/: __init__.py  address_data_generator.py  address_model.py  generate_data.py  generate_model_interface.py  person_data_generator.py  person_model.py
tests/: address_data_generator.py  person_data_generator.py  test_generate_data.py
